Not Showing playlist description error fixed

--- a/Frontend/src/components/Playlist/playlist.css
+++ b/Frontend/src/components/Playlist/playlist.css
@@ -54,6 +54,7 @@
     margin-left: 110px;
     color:red;
     font-style: bold;
+    font-weight: 600;
 
 }
 
